--- a/DrugRegimen/static/doctorhome.html
+++ b/DrugRegimen/static/doctorhome.html
@@ -1,9 +1,200 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<title>Home</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <style>
+        #title {
+            padding-left: 35px;
+        }
+
+        body {
+            padding: 0px;
+            margin: 0px;
+
+        }
+
+        .navbar {
+            overflow: hidden;
+            width: 100%;
+            background-color: #006857;
+        }
+
+        .navbar a {
+            color: white;
+            text-decoration: none;
+            display: block;
+            padding: 15px 20px;
+            text-align: center;
+        }
+
+        .left-nav {
+            float: left;
+        }
+
+        .dropdown {
+            float: right;
+            overflow: hidden;
+            background-color: inherit;
+        }
+
+        .navbar a:hover {
+            background-color: #01463a;
+            color: #f4f4f4;
+        }
+
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background: #006857;
+        }
+
+        .footer p {
+            text-align: center;
+            color: white;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: grey;
+            min-width: 96.44px;
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+        }
+
+        .dropdown-content a {
+            float: none;
+            color: white;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            text-align: left;
+        }
+
+        .dropdown-content a:hover {
+            background-color: #01463a;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        .patient-summary {
+            overflow: hidden;
+            margin: 15px 15px;
+            /* padding: 10px 24px; */
+            background-color: rgb(187, 187, 187);
+            border-radius: 20px;
+        }
+
+        .patient-summary a {
+            font-size: larger;
+            text-decoration: none;
+            display: block;
+            color: rgb(0, 0, 0);
+            width: max-content;
+            border-left: 20px;
+            padding: 15px 20px;
+            float: left;
+            background-color: rgb(187, 187, 187);
+        }
+
+        .patient-summary a:hover {
+            background-color: #01493d;
+            color: white;
+        }
+
+        .patient-summary video {
+            float: right;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+
+        .meds {
+            width: 40%;
+        }
+
+        .meds li {
+            list-style-type: none;
+            padding: 0px 20px;
+            margin: 0;
+            font-size: large;
+            float: left;
+        }
+
+        .time-last-taken {
+            padding: 0px 320px;
+        }
+
+        .time-last-taken li {
+            list-style-type: none;
+            font-size: large;
+            
+        }
+        .require-videos {
+            padding: 0px 500px;
+
+        }
+        .require-videos input{
+            padding: 0px 0px;
+            margin: 0px;
+
+        }
+    </style>
 </head>
+
 <body>
-	<h1>You're logged in as a doctor</h1>
+    <header>
+        <h2 id="title">Drug Regimen Dashboard</h2>
+        <nav class="navbar">
+            <a href='#' class="left-nav">About</a>
+            <a href='#' class="left-nav">Help</a>
+            <div class="dropdown">
+                <a href='#' class="dropbtn">Dr Jones</a>
+                <div class="dropdown-content">
+                    <a href="#">Account</a>
+                    <a href="#">Sign Out</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="patient-summary">
+            <div class="video-player">
+                <video class="video-player" width="320" height="240" controls>
+                    <source src="movie.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            <a href='#' class="patient_name">John Smith</a>
+            <div class="meds">
+                <ul>
+                    <li>Pyrazinamide 20mg</li>
+                    <li>Nurofen 10mg</li>
+                </ul>
+            </div>
+            <div class="time-last-taken">
+                <ul>
+                    <li>2 hours ago</li>
+                    <li>9:30 AM</li>
+                </ul>
+            </div>
+            <div class="require-videos">
+                <input type="checkbox" id="require1" name=require1" value="Required">
+                <label for="require1"> Require videos</label>
+            </div>
+        </div>
+
+    </main>
+    <footer class="footer">
+        <p>Copyright &copy; Team 5 2021</p>
+    </footer>
 </body>
+
 </html>
