--- a/DrugRegimen/static/patienthome.html
+++ b/DrugRegimen/static/patienthome.html
@@ -1,18 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <style>
+        #title {
+            padding-left: 35px;
+        }
+
+        body {
+            padding: 0px;
+            margin: 0px;
+
+        }
+
+        .navbar {
+            overflow: hidden;
+            width: 100%;
+            background-color: #006857;
+        }
+
+        .navbar a {
+            color: white;
+            text-decoration: none;
+            display: block;
+            padding: 15px 20px;
+            text-align: center;
+        }
+
+        .left-nav {
+            float: left;
+        }
+
+        .dropdown {
+            float: right;
+            overflow: hidden;
+            background-color: inherit;
+        }
+
+        .navbar a:hover {
+            background-color: #01463a;
+            color: #f4f4f4;
+        }
+
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background: #006857;
+        }
+
+        .footer p {
+            text-align: center;
+            color: white;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: grey;
+            min-width: 96.44px;
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+        }
+
+        .dropdown-content a {
+            float: none;
+            color: white;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            text-align: left;
+        }
+
+        .dropdown-content a:hover {
+            background-color: #01463a;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        .prescription-summary {
+            overflow: hidden;
+            margin: 15px 15px;
+            /* padding: 10px 24px; */
+            background-color: rgb(187, 187, 187);
+            border-radius: 20px;
+        }
+
+        .prescription-summary a {
+            font-size: larger;
+            text-decoration: none;
+            display: block;
+            color: rgb(0, 0, 0);
+            width: max-content;
+            border-left: 20px;
+            padding: 15px 20px;
+            float: left;
+            background-color: rgb(187, 187, 187);
+        }
+
+        .prescription-summary a:hover {
+            background-color: #01493d;
+            color: white;
+        }
+
+        .prescription-summary video {
+            float: right;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+
+        .meds {
+            width: 40%;
+        }
+
+        .meds li {
+            list-style-type: none;
+            padding: 0px 20px;
+            margin: 0;
+            font-size: large;
+            float: left;
+        }
+
+        .time-last-taken {
+            padding: 0px 320px;
+        }
+
+        .time-last-taken li {
+            list-style-type: none;
+            font-size: large;
+            
+        }
+        .require-videos {
+            padding: 0px 500px;
+
+        }
+        .require-videos input{
+            padding: 0px 0px;
+            margin: 0px;
+
+        }
+    </style>
 </head>
+
 <body>
-	<h3>{{ now }}</h3>
-    <h3>Today's Medications</h3>
-    <ul>
-        {% for medication in medications %}
-        <li>
-        	{{ medication }}
-			<button type="button">Enter Code</button>
-			<button type="button">Submit Video</button>
-        </li>
-        {% endfor %}
-    </ul>
+    <header>
+        <h2 id="title">Drug Regimen Dashboard</h2>
+        <nav class="navbar">
+            <a href='#' class="left-nav">About</a>
+            <a href='#' class="left-nav">Help</a>
+            <div class="dropdown">
+                <a href='#' class="dropbtn">Dr Jones</a>
+                <div class="dropdown-content">
+                    <a href="#">Account</a>
+                    <a href="#">Sign Out</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="prescription-summary">
+            <a href='#' class="medication">Nurofen</a>
+            <div class="meds">
+                <ul>
+                    <li>Last Taken at:</li>
+                    <li>Next dose due at:</li>
+                </ul>
+            </div>
+            <div class="video-required">
+                <ul>
+                    <li>2 hours ago</li>
+                    <li>9:30 AM</li>
+                </ul>
+            </div>
+        </div>
+
+    </main>
+    <footer class="footer">
+        <p>Copyright &copy; Team 5 2021</p>
+    </footer>
+</body>
+
+</html>
