--- a/DrugRegimen/static/pharmacisthome.html
+++ b/DrugRegimen/static/pharmacisthome.html
@@ -150,13 +150,13 @@
     <header>
         <h2 id="title">Drug Regimen Dashboard</h2>
         <nav class="navbar">
-            <a href='#' class="left-nav">About</a>
-            <a href='#' class="left-nav">Help</a>
+            <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
+            <a href='http://127.0.0.1:8000/help' class="left-nav">Help</a>
             <div class="dropdown">
-                <a href='#' class="dropbtn">Dr Jones</a>
+                <a href='#' class="dropbtn">{{ username }}</a>
                 <div class="dropdown-content">
-                    <a href="#">Account</a>
-                    <a href="#">Sign Out</a>
+                    <a href="http://127.0.0.1:8000/account">Account</a>
+                    <a href="http://127.0.0.1:8000">Sign Out</a>
                 </div>
             </div>
         </nav>
