boiler plate text for about pages added

--- a/DrugRegimen/static/pharmacistabout.html
+++ b/DrugRegimen/static/pharmacistabout.html
@@ -93,7 +93,7 @@
             <a href='#' class="left-nav">About</a>
             <a href='#' class="left-nav">Help</a>
             <div class="dropdown">
-                <a href='#' class="dropbtn">Dr Jones</a>
+                <a href='#' class="dropbtn">Caulfield's Pharmacy</a>
                 <div class="dropdown-content">
                     <a href="http://127.0.0.1:8000/account">Account</a>
                     <a href="http://127.0.0.1:8000">Sign Out</a>
@@ -102,7 +102,14 @@
         </nav>
     </header>
     <main>
-
+        <p>
+            &lt;App Name&gt; is a service which allows doctors to manage perscriptions for their patients.</br>
+            It facilitates pharmacies coupling prescriptions with QR codes which the patient scans to inform their doctor and to check for medical conflicts.</br>
+            </br>
+            Our service offers a range of services for pharmacies, including the following:</br>
+            > The ability to verify digital prescriptions at the counter</br>
+            > A handy means to keep track of prescriptions granted</br>
+        </p>
     </main>
     <footer class="footer">
         <p>Copyright &copy; Team 5 2021</p>
