--- a/DrugRegimen/static/pharmacisthelp.html
+++ b/DrugRegimen/static/pharmacisthelp.html
@@ -93,7 +93,7 @@
             <a href='#' class="left-nav">About</a>
             <a href='#' class="left-nav">Help</a>
             <div class="dropdown">
-                <a href='#' class="dropbtn">Dr Jones</a>
+                <a href='#' class="dropbtn">Caulfield's Pharmacy</a>
                 <div class="dropdown-content">
                     <a href="http://127.0.0.1:8000/account">Account</a>
                     <a href="http://127.0.0.1:8000">Sign Out</a>
