--- a/DrugRegimen/static/doctorabout.html
+++ b/DrugRegimen/static/doctorabout.html
@@ -102,7 +102,15 @@
         </nav>
     </header>
     <main>
-
+        <p>
+            &lt;App Name&gt; is a service which allows doctors to manage perscriptions for their patients.</br>
+            It facilitates pharmacies coupling prescriptions with QR codes which the patient scans to inform their doctor and to check for medical conflicts.</br>
+            </br>
+            Our service offers a range of services for doctors, including the following:</br>
+            > Write a digital prescription for a patient - including the listing of others who can retrieve the prescription on their behalf</br>
+            > Set the prescription so that video uploads from the patient of their conumption of the prescription are necessary</br>
+            > Review the QR scans and videos of patients</br>
+        </p>
     </main>
     <footer class="footer">
         <p>Copyright &copy; Team 5 2021</p>
