--- a/DrugRegimen/static/about/doctorabout.html
+++ b/DrugRegimen/static/about/doctorabout.html
@@ -90,10 +90,11 @@
     <header>
         <h2 id="title">Drug Regimen</h2>
         <nav class="navbar">
-            <a href='#' class="left-nav">About</a>
-            <a href='#' class="left-nav">Help</a>
+            <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
+            <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
+            <a href='http://127.0.0.1:8000/help' class="left-nav">Help</a>
             <div class="dropdown">
-                <a href='#' class="dropbtn">Jaine Smith</a>
+                <a href='#' class="dropbtn">{{ username }}</a>
                 <div class="dropdown-content">
                     <a href="http://127.0.0.1:8000/account">Account</a>
                     <a href="http://127.0.0.1:8000">Sign Out</a>
@@ -102,7 +103,15 @@
         </nav>
     </header>
     <main>
-
+        <p>
+            &lt;App Name&gt; is a service which allows doctors to manage perscriptions for their patients.</br>
+            It facilitates pharmacies coupling prescriptions with QR codes which the patient scans to inform their doctor and to check for medical conflicts.</br>
+            </br>
+            Our service offers a range of services for doctors, including the following:</br>
+            > Write a digital prescription for a patient - including the listing of others who can retrieve the prescription on their behalf</br>
+            > Set the prescription so that video uploads from the patient of their conumption of the prescription are necessary</br>
+            > Review the QR scans and videos of patients</br>
+        </p>
     </main>
     <footer class="footer">
         <p>Copyright &copy; Team 5 2021</p>
