--- a/DrugRegimen/static/account/doctoraccount.html
+++ b/DrugRegimen/static/account/doctoraccount.html
@@ -90,10 +90,11 @@
     <header>
         <h2 id="title">Drug Regimen</h2>
         <nav class="navbar">
-            <a href='#' class="left-nav">About</a>
-            <a href='#' class="left-nav">Help</a>
+            <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
+            <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
+            <a href='http://127.0.0.1:8000/help' class="left-nav">Help</a>
             <div class="dropdown">
-                <a href='#' class="dropbtn">Caulfield's Pharmacy</a>
+                <a href='#' class="dropbtn">{{ username }}</a>
                 <div class="dropdown-content">
                     <a href="http://127.0.0.1:8000/account">Account</a>
                     <a href="http://127.0.0.1:8000">Sign Out</a>
