--- a/DrugRegimen/static/help/doctorhelp.html
+++ b/DrugRegimen/static/help/doctorhelp.html
@@ -92,6 +92,8 @@
         <nav class="navbar">
             <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
             <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
+            <a href='http://127.0.0.1:8000/manage' class="left-nav">Manage Patients</a>
+            <a href='http://127.0.0.1:8000/prescribe' class="left-nav">Prescribe Medication</a>
             <a href='http://127.0.0.1:8000/help' class="left-nav">Help</a>
             <div class="dropdown">
                 <a href='#' class="dropbtn">{{ username }}</a>
