Fixed Start Date functionality

--- a/DrugRegimen/static/prescribe-medication/prescribe.html
+++ b/DrugRegimen/static/prescribe-medication/prescribe.html
@@ -170,10 +170,12 @@
                 <label for="status">Status: </label>
                 <input id="status" type="text" name="status">
                 <br><br>
-
+                <!--
                 <label for="start-date">Start Date: </label>
                 <input id="start-date" type="date" name="start-date">
                 <br><br>
+                Start date set to Null and changed on first video upload by user.
+                -->
 
                 <label for="video-required">Video Required: </label>
                 <input id="video-required" type="checkbox" name="video-required">
