--- a/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
+++ b/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>About</title>
     <style>
         #title {
@@ -83,6 +84,91 @@
         .dropdown:hover .dropdown-content {
             display: block;
         }
+
+        * {box-sizing: border-box;}
+
+.topnav {
+  overflow: hidden;
+  background-color: #e9e9e9;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #2196F3;
+  color: white;
+}
+
+.topnav .search-container {
+  float: right;
+}
+
+.topnav input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+}
+
+.topnav .search-container button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav .search-container button:hover {
+  background: #ccc;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav .search-container {
+    float: none;
+  }
+  .topnav a, .topnav input[type=text], .topnav .search-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type=text] {
+    border: 1px solid #ccc;  
+  }
+}
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
     </style>
 </head>
 
@@ -102,6 +188,45 @@
     </header>
     <main>
 
+        <div class="topnav">
+            <a>Enter medications:</a>
+            <div class="search-container">
+              <form action="/action_page.php">
+                <input type="text" placeholder="Search.." name="search">
+                <button type="submit"><i class="fa fa-search"></i></button>
+              </form>
+            </div>
+            <div class="search-container">
+                <form action="/action_page.php">
+                  <input type="text" placeholder="Search.." name="search">
+                  <button type="submit"><i class="fa fa-search"></i></button>
+                </form>
+              </div>
+          </div>
+          
+          <div style="padding-left:16px">
+            <h2>Results</h2>
+          </div>
+          <table>
+            <tr>
+              <th>Drug Interaction</th>
+              <th>Explanation</th>
+              <th>Action</th>
+              <th>Warning</th>
+            </tr>
+            <tr>
+              <td>abemaciclib</td>
+              <td>Rifampicin moderately decreases the exposure to abemaciclib.</td>
+              <td>Avoid concurrent use.</td>
+              <td>Avoid</td>
+          </tr>
+          <tr>
+            <td>abemaciclib</td>
+            <td>Rifampicin is predicted to reduce alprazolam exposure.</td>
+            <td>Consider giving a different benzodiazepine (e.g. temazepam).</td>
+            <td>Avoid</td>
+          </tr>
+          </table>
     </main>
     <footer class="footer">
         <p>Copyright &copy; Team 5 2021</p>
